<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="10dp"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="20dp"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/Descripcion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/tProyectos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/java"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/a2"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/a3"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/a1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/a4"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/Xcode"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/x1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/Xcode1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/a12"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:text="@string/Flutter"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/F1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/F2"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/F3"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="25dp"
            android:text="@string/F4"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>