<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionUsuario">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_usuario"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/purple_500"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_twitter"
                            android:contentDescription="@string/fotos"
                            android:src="@drawable/twitter"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <TextView
                            android:id="@+id/tv_twitter"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:id="@+id/iv_instagram"
                            android:contentDescription="@string/fotos"
                            android:src="@drawable/instagram"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <TextView
                            android:id="@+id/tv_instagram"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:id="@+id/iv_portafolio"
                            android:contentDescription="@string/fotos"
                            android:src="@drawable/web"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <LinearLayout
                        android:background="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_colecciones"
                            android:text="@string/colecciones"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                        <TextView
                            android:id="@+id/tv_likes"
                            android:text="@string/likes"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                        <TextView
                            android:id="@+id/tv_totalFotos"
                            android:text="@string/fotos"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_dcolecciones"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                        <TextView
                            android:id="@+id/tv_dlikes"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                        <TextView
                            android:id="@+id/tv_dtotalFotos"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>

                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_bio"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_descripcion"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <ImageView
                android:id="@+id/iv_imagen"
                android:contentDescription="@string/fotos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>